fix img-stretch for _section--info

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -7,6 +7,8 @@ $padding--side-lg: 10rem;
 $padding--side-xl: 10rem;
 $padding--side-xxl: 10rem;
 
+$section--img-stretch: calc(100% - 8.4rem);
+
 
 // nav
 $padding--nav_m-m: 1rem $padding--side-m;
